browser.css
.visual-refresh {
    /* gives each variable a default */
    --vr-header-snippet-top: 0px;
    --vr-header-snippet-server-padding: 16px;
    --vr-header-snippet-space: 100px;
    --vr-header-snippet-button-padding: 10px;

    --vencord-padding: 0px;
    --checkpoint-padding: 0px;

    /* adds padding to chat pages */
    div.chat_f75fb0:not(.threadSidebarOpen_f75fb0),
    /* adds padding to friend list page */
    main.container__133bf,
    /* adds padding to thread sidebar */
    div.chatLayerWrapper__01ae2 {
        section.container__9293f {
            padding-right: var(--vr-header-snippet-space);
        }
    }

    /* adds padding to servers/app pages */
    div.headerBar__8a7fc.overlay__8a7fc {
        padding-right: var(--vr-header-snippet-space);
    }

    /* livestream video controls */
    div.videoControls_bfe55a div.subtitleContainer__49508 {
        padding-right: calc(var(--vr-header-snippet-space) - 20px);
    }

    div.base__5e434 {
        grid-template-rows: [top] 0 [titleBarEnd] min-content [noticeEnd] 1fr [contentEnd] min-content [end];

        /* check if users have the vencord or "checkpoint (discord recap) button */
        &:has(> div.bar_c38106 > div.trailing_c38106 .vc-toolbox-btn) {
            --vencord-padding: 44px;
        }
        &:has(> div.bar_c38106 > div.trailing_c38106 path.iconForeground_f1f2b1) {
            --checkpoint-padding: 44px;
        }

        /* pre-calculates the total padding needed when including the vencord/checkpoint padding */
        --vr-header-snippet-extra-padding: calc(var(--vencord-padding) + var(--checkpoint-padding));
        --vr-header-snippet-total-padding: calc(var(--vr-header-snippet-space) + var(--vr-header-snippet-extra-padding));

        /* adds padding to app detail page */
        div.detailHeaderContainer_e1147e {
          margin-right: calc(var(--vr-header-snippet-total-padding) - 12px);
        }

        div.subtitleContainer_f75fb0,
        main.container__133bf {
            /* adds padding to entire top container */
            section.container__9293f {
                padding-right: var(--vr-header-snippet-total-padding);
            }
        }

        /* checks if thread sidebar is open */
        &:has(div > div.chatLayerWrapper__01ae2) {
            /* removes extra padding given to search bar */
            div.subtitleContainer_f75fb0 > section.container__9293f {
                padding-right: 8px;
            }

            /* adds padding to the thread buttons */
            div.container__01ae2 > section.container__9293f {
                padding-right: var(--vr-header-snippet-total-padding);
            }

            /* adds padding to the vc chat page in fullscreen */
            &:has(> div.content__5e434 > div.hidden__5e434) div.container__01ae2 > section.container__9293f {
                padding-right: var(--vr-header-snippet-button-padding);
            }
        }

        /* adds extra spacing to the orbs button on orbs/shop page */
        div.container__44ee9 {
            padding-right: calc(var(--vr-header-snippet-extra-padding));
        }

        /* livestream header on vc */
        div.upperContainer__9293f div.toolbar__49508 {
            margin-right: -173px !important;
        }  

        /* adds extra padding to chat icon on vc */
        div.video_cb9592:not(:has(.fullScreen_cb9592)) div.subtitleContainer__49508:has(button.button__201d5[aria-label^='Show Chat']) {
            margin-right: calc(var(--vr-header-snippet-total-padding) - var(--vr-header-snippet-button-padding)) !important;
        }

        /* checks if you are searching for a server/app */
        div.container_d08938,
        div.innerContainer_e1147e {
            /* adds padding to search bar */
            div.search__1ac1c {
                /* TODO: fix issue where doesnt let you search if window too small, or clicking search icon clips it into bar */
                margin-right: calc(var(--vr-header-snippet-button-padding) + var(--vr-header-snippet-extra-padding));
            }
            

            /* adds extra padding if you are looking at search results */
            &:has(> div.headerBar__8a7fc.relative__8a7fc) {
                .search__1ac1c {
                    padding-right: calc(var(--vr-header-snippet-space) + var(--vr-header-snippet-extra-padding) - 60px);
                }
            }
        }
        
        /* moves element to "front" */
        & > div.content__5e434 {
            z-index: 0;
        }

        /* top bar variables */
        & > div.bar_c38106 {
            position: absolute;
            position-anchor: --vr-header-snippet;
            top: var(--vr-header-snippet-top);
            right: anchor(right);
            width: anchor-size(width);
            padding: 0 var(--vr-header-snippet-button-padding) 0 0;

            /* removes the title bar */
            & > .title_c38106 {
                display: none;
            }
        }

        &:has(> div.notice__6e2b9) {
            & > div.bar_c38106 {
                top: anchor(top);
            }
        }

        /* inbox and help button variables */
        div.trailing_c38106 {
            background: none;
            border: none;
            height: var(--custom-channel-header-height);
        }

        /* checks if a thread is opened on the side of your small screen */
        &:has(.threadSidebarOpen_f75fb0.threadSidebarFloating_f75fb0) > .bar_c38106 {
            z-index: 0;
        }
    }

    /* removes the extra padding given to the popout menu on vcs */
    div.popout__0bd4a {
        section.container__9293f > div.upperContainer__9293f {
            /* both areas have slightly different padding for some reason */
            :has([aria-label="Show Chat"]) {
                margin-right: -64px;
            }
            :has([aria-label="Close"]) {
                margin-right: -96px;
            }
        }
    }

    /* checks if discord is on a server page */
    :not(:has(div.page__5e434 > div.chat_f75fb0)) div.base__5e434 > div.bar_c38106 {
        right: 0 !important;
    }

    /* adds padding to server list */
    ul[data-list-id="guildsnav"] > div.itemsContainer_ef3116 > div.stack_dbd263 {
        margin-top: var(--vr-header-snippet-server-padding);
    }

    /* adds padding to shop page if a toolbar is showing (unsure what the toolbar is) */
    .shop__6db1d section.showToolbar__9293f {
        padding-right: var(--vr-header-snippet-space);

        .balanceWidgetMenu__80679 {
            margin-right: 0;
        }
    }

    /* mod view padding */
    .profileThemedContainer__656be .topRow__34940 {
        align-items: end;
        padding-bottom: 0;

        .memberNameContainer__34940 {
            padding-bottom: 12px;
        }
    }

    /* search/wishlist/orbs on shop page */
    .alignedRightContent__80679 {
        position: fixed;
        right: calc(var(--vr-header-snippet-space) - 33px);
    }

    /* orbs balance on quests page */
    .headerBarContent__1a9ce .container__44ee9 {
        position: fixed;
        right: calc(var(--vr-header-snippet-space) + 3px);
    }

    /* fixes extra gap of group dm button on friends page */
    .toolbar__9293f .inviteToolbar__133bf {
        padding-right: 0px;
    }

    /* fixes weird padding issue when searching for an app */
    .sideFilterContainer__1eae0 {
        position: fixed;
        top: 57px;
    }
}

